--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "author": "Ville de Médenine",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
